class CategorySlot < ApplicationRecord
  belongs_to :category
  belongs_to :slot
end
