# This file is auto-generated from the current state of the database. Instead
# of editing this file, please use the migrations feature of Active Record to
# incrementally modify your database, and then regenerate this schema definition.
#
# This file is the source Rails uses to define your schema when running `bin/rails
# db:schema:load`. When creating a new database, `bin/rails db:schema:load` tends to
# be faster and is potentially less error prone than running all of your
# migrations from scratch. Old migrations may fail to apply correctly if those
# migrations use external dependencies or application code.
#
# It's strongly recommended that you check this file into your version control system.

ActiveRecord::Schema[8.1].define(version: 2026_03_31_200350) do
  create_table "characters", force: :cascade do |t|
    t.integer "bab"
    t.integer "charisma"
    t.integer "constitution"
    t.datetime "created_at", null: false
    t.integer "dexterity"
    t.integer "health"
    t.integer "intelligence"
    t.integer "level"
    t.string "name"
    t.integer "strength"
    t.datetime "updated_at", null: false
    t.integer "wisdom"
  end

  create_table "items", force: :cascade do |t|
    t.datetime "created_at", null: false
    t.string "name"
    t.datetime "updated_at", null: false
  end
end
